fix: bootstrap5 input-group button / .input-group-text wrapping

--- a/src/scss/tom-select.bootstrap5.scss
+++ b/src/scss/tom-select.bootstrap5.scss
@@ -173,6 +173,7 @@ $select-arrow-offset: calc(#{$select-padding-x} + 5px) !default;
 .#{$select-ns}-wrapper {
 	min-height: $input-height;
 	display:flex;
+	width: 1%;
 
 	.input-group-sm > &,
 	&.form-select-sm,
